feat: SSE 연결동안 권한 문제 해결